--- a/bookinside/app/src/main/res/layout/activity_find_books.xml
+++ b/bookinside/app/src/main/res/layout/activity_find_books.xml
@@ -1,61 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/register_gradient"
-    android:fillViewport="false"
-    android:orientation="vertical"
-    android:padding="0dp">
+    android:textAlignment="center"
+    tools:context=".FindBooksActivity">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/hei_dash"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAlignment="center"
-        tools:context=".FindBooksActivity">
+    <TextView
+        android:id="@+id/book_find_section_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="60dp"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center"
+        android:text="@string/title"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/book_find_section_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="60dp"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:text="@string/title"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+    <ImageView
+        android:id="@+id/iv_arrow_from_find_books"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="70dp"
+        android:clickable="true"
+        android:contentDescription="@string/back_from_view_books"
+        android:focusable="true"
+        android:src="@drawable/arrow" />
 
-        <ImageView
-            android:id="@+id/iv_arrow_from_find_books"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="70dp"
-            android:clickable="true"
-            android:contentDescription="@string/back_from_view_books"
-            android:focusable="true"
-            android:src="@drawable/arrow" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_search_book"
+        android:layout_below="@+id/book_find_section_title"
 
-        <LinearLayout
-            android:id="@+id/addbookhere"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
+        app:cardBackgroundColor="#C1FFFFFF"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="90dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-        </LinearLayout>
+            <SearchView
+                android:id="@+id/search_book"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                android:iconifiedByDefault="false"
+                android:isScrollContainer="true"
+                android:searchIcon="@null"
+                android:queryBackground="@android:color/transparent"
+                android:queryHint="Search Here"
+                android:searchHintIcon="@null">
 
-    </RelativeLayout>
+            </SearchView>
 
-</ScrollView>
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+    <ListView
+        android:id="@+id/list_with_books"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@+id/card_search_book"
+        android:layout_centerHorizontal="true" />
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/list_with_books"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/card_search_book"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:orientation="horizontal">-->
+
+<!--    </LinearLayout>-->
+
+</RelativeLayout>
