--- a/bookinside/app/src/main/res/layout/activity_book_page.xml
+++ b/bookinside/app/src/main/res/layout/activity_book_page.xml
@@ -9,6 +9,18 @@
     tools:context=".BookActivity">
 
     <ImageView
+        android:id="@+id/back_from_book_page"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="70dp"
+        android:clickable="true"
+        android:contentDescription="@string/back_from_book_page"
+        android:focusable="true"
+        android:src="@drawable/arrow" />
+
+    <ImageView
         android:id="@+id/book_cover_image"
         android:layout_width="wrap_content"
         android:layout_height="231dp"
