--- a/bookinside/app/src/main/res/layout/activity_find_books.xml
+++ b/bookinside/app/src/main/res/layout/activity_find_books.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAlignment="center"
-    android:background="@drawable/item_gradient"
+    android:background="#2f1847"
 
     tools:context=".FindBooksActivity">
 
