--- a/bookinside/app/src/main/res/layout/activity_view_books.xml
+++ b/bookinside/app/src/main/res/layout/activity_view_books.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/register_gradient"
+    android:background="#2f1847"
     android:fillViewport="false"
     android:orientation="vertical"
     android:padding="0dp">
